Add sound on collide

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="mask-icon" type="" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
 
 
-  <title>CodePen - 2125-3</title>
+  <title>CodePen - 2126-3</title>
   
   
   
@@ -34,8 +34,12 @@
 </head>
 
 <body translate="no" >
-  <div>
-  Bot Count: <span id="botCount">0</span> Deaths: <span id="deaths">0</span> Time: <span id="theTime">0</span> Wins: <span id="yourWins">0</span>
+  <audio id="smack">
+  <source src="https://math.seattleacademy.org/garyanderson/snd/smack.wav" type="audio/wav">
+  </audio>
+
+<div>
+  Bot Count: <span id="botCount">0</span> Deaths: <span id="deaths">0</span> time: <span id="theTime">0</span>
   <button id="resetBots">Reset Bots</button>
 </div>
 <canvas id="myCanvas" width="600" height="300"></canvas>
@@ -44,8 +48,8 @@
   
       <script id="rendered-js" >
 console.clear();
+const smacksnd = document.getElementById("smack");
 let timer = 0;
-let wins = 0;
 const c = document.getElementById("myCanvas");
 const ctx = c.getContext("2d");
 let bots = [];
@@ -54,13 +58,12 @@ function makeBot() {
   bot.r = 10 + Math.random() * 5;
   bot.x = (c.width - 2 * bot.r) * Math.random() + bot.r;
   bot.y = (c.height - 2 * bot.r) * Math.random() + bot.r;
-  
 
   //bot.theta= -Math.PI/4;
   bot.dx = Math.random() * 2 - 1;
   bot.dy = Math.random() * 2 - 1;
   bot.theta = Math.atan2(bot.dy, bot.dx);
-  bot.v = (bot.dx + bot.dy)/2;
+  bot.v = (bot.dx + bot.dy) / 2;
   bot.vl = 1;
   bot.vr = 1;
   return bot;
@@ -91,7 +94,7 @@ function drawBot(bot) {
 
 function moveBot(bot) {
   timer = timer + 1;
-   let theTime = document.getElementById("theTime");
+    let theTime = document.getElementById("theTime");
   theTime.innerHTML = timer;
   
   bot.x = bot.x + bot.dx;
@@ -130,6 +133,7 @@ function checkCollide() {
         (bots[i].x - bots[j].x) ** 2 + (bots[i].y - bots[j].y) ** 2
       );
       if (d <= bots[i].r + bots[j].r) {
+        smacksnd.play();
         if (bots[i].r < bots[j].r) {
           bots[j].r = Math.sqrt(bots[i].r ** 2 + bots[j].r ** 2);
           bots[i].r = 0;
@@ -168,36 +172,13 @@ function dokeydown(e) {
   if (e.key == "ArrowDown") {
     bots[0].dy = bots[0].dy + stepSize;
   }
-  
-  //stop bot
-  if (e.key == " "){
+  //Stop the Bot
+    if (e.key == " ") {
     bots[0].dy = 0;
     bots[0].dx = 0;
-  }
-  
-  //start bot
-  if (e.key == "Enter"){
-    bots[0].dy = Math.random() + 1;
-    bots[0].dx = Math.random() + 1;
-  }
-  
-    if (e.key == "w") {
-    bots[0].dy = bots[0].dy + stepSize;
-  }
-
-  if (e.key == "d") {
-    bots[0].dx = bots[0].dx + stepSize;
-  }
-
-  if (e.key == "a") {
-    bots[0].dx = bots[0].dx - stepSize;
-  }
-
-  if (e.key == "s") {
-    bots[0].dy = bots[0].dy + stepSize;
+    e.stopPropagation();
   }
 }
-
 document.addEventListener("keydown", dokeydown);
 
 document.getElementById("resetBots").addEventListener("click", doResetBots);
